save Version mit Suche die funktioniert